# CuteHost

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
ext/: CMakeLists.txt
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/: AudioPlugin.hpp  AudioPluginHost.hpp  AudioPluginLibrary.hpp  AudioPluginLoader.hpp  BasicPlugin.hpp  JuceApplication.hpp
src/core/src/: AudioPlugin.cpp  AudioPluginHost.cpp  AudioPluginLibrary.cpp  AudioPluginLoader.cpp  BasicPlugin.cpp  JuceApplication.cpp  PluginWindow.hpp  Utils.cpp  Utils.hpp
src/host/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  PluginDataModel.cpp  PluginDataModel.hpp  appicon.rc.in  main.cpp
