# VST3 SDK
set(SMTG_ADD_VST3_PLUGINS_SAMPLES OFF CACHE BOOL "")
set(SMTG_ADD_VST3_HOSTING_SAMPLES OFF CACHE BOOL "")
set(SMTG_VSTGUI_TOOLS OFF CACHE BOOL "")
add_subdirectory(vst3sdk)
set(VST_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/vst3sdk CACHE INTERNAL "VST SDK includes" FORCE)
set(VST_LIBRARIES "base;sdk" CACHE INTERNAL "VST SDK libraries" FORCE)
set(VST_GUI_LIB "vstgui" CACHE INTERNAL "VSG GUI lib" FORCE)
set(VST_GUI_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/vst3sdk/vstgui4" CACHE INTERNAL "VST GUI includes" FORCE)


# NodeEditor
set(BUILD_EXAMPLES OFF CACHE BOOL "")
add_subdirectory(nodeeditor)
